# market-maven

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  LICENSE  Makefile  README.md  REFACTORING_PLAN.md  alembic.ini  demo.py  docker-compose.yml  env.example  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
market_maven/: __init__.py  __main__.py  cli.py
market_maven/agents/: __init__.py  market_maven.py
market_maven/api/: __init__.py  auth.py  main.py  main_simple.py  models.py
market_maven/config/: __init__.py  settings.py
market_maven/core/: __init__.py  cache.py  database.py  database_init.py  error_handler.py  exceptions.py  logging.py  metrics.py  performance.py  security.py  validators.py
market_maven/models/: __init__.py  db_models.py  schemas.py
market_maven/tools/: __init__.py  analyzer_tool.py  data_fetcher.py  data_fetcher_tool.py  trader_tool.py
monitoring/: prometheus.yml
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_ibapi_integration.py
tests/performance/: __init__.py
tests/unit/: __init__.py  test_cache.py  test_data_fetcher.py  test_database_models.py  test_validators.py
